[gd_scene load_steps=45 format=2]

[ext_resource path="res://scripts/cobra.gd" type="Script" id=1]
[ext_resource path="res://shaders/golpe.tres" type="Material" id=3]
[ext_resource path="res://assets/tiles/enemigos/cobra/cobra.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 224, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 128, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 160, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "golpeado",
"speed": 4.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "caminar",
"speed": 16.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "morir",
"speed": 6.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "espera",
"speed": 8.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "atacar",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=33]
radius = 34.3317
height = 0.0

[sub_resource type="CapsuleShape2D" id=34]
radius = 7.82221
height = 25.67

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 4.84339, 7.06835 )

[sub_resource type="Gradient" id=36]
offsets = PoolRealArray( 0.0048, 0.4128, 0.5792, 0.848 )
colors = PoolColorArray( 0.309613, 0.00483771, 0.00483771, 1, 1, 0.298569, 0, 1, 1, 0.487484, 0.269328, 1, 1, 0.79211, 0.70362, 1 )

[sub_resource type="GradientTexture" id=37]
gradient = SubResource( 36 )

[sub_resource type="Curve" id=38]
min_value = -200.0
max_value = 400.0
_data = [ Vector2( 0.0231481, 183.242 ), 0.0, -560.0, 0, 0, Vector2( 1, 14.1512 ), 840.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=39]
curve = SubResource( 38 )

[sub_resource type="ParticlesMaterial" id=40]
emission_shape = 1
emission_sphere_radius = 6.6
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 180.0
flatness = 0.23
gravity = Vector3( 0, 0, 0 )
initial_velocity = 85.03
initial_velocity_random = 0.5
orbit_velocity = 600.0
orbit_velocity_random = 0.02
linear_accel = 100.0
linear_accel_random = 0.2
linear_accel_curve = SubResource( 39 )
scale = 2.5
color_ramp = SubResource( 37 )

[sub_resource type="CapsuleShape2D" id=41]
radius = 7.26034
height = 8.57723

[node name="cobra" type="KinematicBody2D"]
position = Vector2( -0.222717, -10.468 )
collision_layer = 4
collision_mask = 7
script = ExtResource( 1 )

[node name="animacion" type="AnimatedSprite" parent="."]
material = ExtResource( 3 )
position = Vector2( 1.90735e-06, -0.198423 )
frames = SubResource( 32 )
animation = "atacar"
frame = 2
speed_scale = 1.1
playing = true

[node name="area_alerta" type="Area2D" parent="."]
collision_layer = 4

[node name="colision" type="CollisionShape2D" parent="area_alerta"]
position = Vector2( 7.62939e-06, 11.4384 )
scale = Vector2( 1.5922, 1.05212 )
shape = SubResource( 33 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="area_ataque" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 7

[node name="colision" type="CollisionShape2D" parent="area_ataque"]
position = Vector2( -0.891182, 9.38638 )
rotation = 1.5708
shape = SubResource( 34 )

[node name="ataque" type="Area2D" parent="."]
position = Vector2( 32.5178, 0 )
collision_layer = 0

[node name="derecha" type="CollisionShape2D" parent="ataque"]
position = Vector2( -24.0497, 9.13171 )
shape = SubResource( 35 )
disabled = true

[node name="izquierda" type="CollisionShape2D" parent="ataque"]
position = Vector2( -41.4313, 8.79988 )
shape = SubResource( 35 )
disabled = true

[node name="particulas" type="Particles2D" parent="."]
position = Vector2( -0.222725, 11.1362 )
emitting = false
amount = 25
lifetime = 0.5
speed_scale = 1.56
explosiveness = 0.5
process_material = SubResource( 40 )

[node name="area_colision" type="CollisionShape2D" parent="."]
position = Vector2( -0.280617, 9.12001 )
rotation = 1.5708
shape = SubResource( 41 )

[connection signal="ready" from="." to="." method="_on_cangrejo_ready"]
[connection signal="animation_finished" from="animacion" to="." method="_on_animacion_animation_finished"]
[connection signal="frame_changed" from="animacion" to="." method="_on_animacion_frame_changed"]
[connection signal="body_entered" from="area_alerta" to="." method="_on_area_alerta_body_entered"]
[connection signal="body_exited" from="area_alerta" to="." method="_on_area_alerta_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="area_ataque" to="." method="_on_area_ataque_body_entered"]
[connection signal="body_exited" from="area_ataque" to="." method="_on_area_ataque_body_exited"]
[connection signal="body_entered" from="ataque" to="." method="_on_ataque_body_entered"]
